--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:fitsSystemWindows="true"
+    android:fitsSystemWindows="false"
     tools:openDrawer="start"
     android:layout_gravity="start">
 
@@ -29,6 +29,7 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             app:title="@string/app_name"
+            android:background="@color/colorPrimary"
             app:menu="@menu/top_app_bar"
             app:showAsAction="ifRoom"
             style="@style/Widget.MaterialComponents.Toolbar.Primary" />
