--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -14,13 +14,6 @@
         android:src="@drawable/ic_font_profile"
         android:visibility="visible"/>
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/profile_BTN_post"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_add"
-        android:layout_gravity="center"/>
-
     <ImageView
         android:id="@+id/profile_IMG_picture"
         android:layout_width="100dp"
@@ -71,5 +64,20 @@
 
     </LinearLayout>
 
+    <ImageView
+        android:layout_width="300dp"
+        android:scaleType="fitXY"
+        android:layout_gravity="center"
+        android:layout_marginBottom="50dp"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_line" />
+
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/profile_RCV_post"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="170dp"/>
 
 </FrameLayout>
