--- a/app/src/main/res/layout/fragment_give_items.xml
+++ b/app/src/main/res/layout/fragment_give_items.xml
@@ -1,54 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/mainList_LST_mainRecycler"
         android:layout_width="match_parent"
         android:layout_height="682dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
-    <RelativeLayout
-        android:id="@+id/relativeLayout"
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/main_BTN_addItemButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.95"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="bottom">
+        app:layout_constraintVertical_bias="0.95"
+        app:srcCompat="@drawable/ic_add" />
 
-        <androidx.coordinatorlayout.widget.CoordinatorLayout
-            android:id="@+id/coordinatorLayout2"
-            android:layout_width="match_parent"
-            android:layout_height="85dp">
 
-            <com.google.android.material.bottomappbar.BottomAppBar
-                android:id="@+id/main_BAB_menu"
-                style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
-                android:layout_width="match_parent"
-                android:layout_height="43dp"
-                android:layout_gravity="bottom"
-                android:backgroundTint="@color/colorPrimary" />
-
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/main_BTN_addItemButton"
-                app:layout_anchor="@id/main_BAB_menu"
-                app:srcCompat="@drawable/ic_add"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-        </androidx.coordinatorlayout.widget.CoordinatorLayout>
-
-    </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
