--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -23,14 +23,14 @@
         android:layout_height="100dp"
         android:src="@drawable/ic_profile"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="50dp"/>
+        android:layout_marginTop="20dp"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_marginStart="150dp"
-        android:layout_marginTop="50dp">
+        android:layout_marginTop="20dp">
 
     <TextView
         android:id="@+id/profile_LBL_name"
@@ -67,17 +67,31 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_above="@id/profile_LAY_post"
+        android:gravity="center"
+        android:layout_marginBottom="50dp"
+        android:layout_marginStart="40dp">
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/profile_BTN_update"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Update profile"
+        android:backgroundTint="@color/colorPrimaryDark"
+        android:layout_marginTop="10dp"/>
+
     <ImageView
         android:id="@+id/profile_IMG_line"
         android:layout_width="300dp"
         android:scaleType="fitXY"
         android:layout_gravity="center"
         android:layout_height="wrap_content"
-        android:layout_above="@id/profile_LAY_post"
-        android:layout_marginBottom="80dp"
-        android:layout_marginStart="45dp"
-        android:src="@drawable/ic_line" />
 
+        android:src="@drawable/ic_line" />
+    </LinearLayout>
         <FrameLayout
             android:id="@+id/profile_LAY_post"
             android:layout_width="match_parent"
