--- a/app/src/main/res/layout/fragment_give_items.xml
+++ b/app/src/main/res/layout/fragment_give_items.xml
@@ -22,14 +22,14 @@
         android:id="@+id/giveFragment_BTN_addItemButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/colorPrimary"
+        android:backgroundTint="@color/teal_200"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.95"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.95"
-        app:srcCompat="@drawable/ic_add" />
+        app:layout_constraintVertical_bias="0.975"
+        app:srcCompat="@drawable/ic_add_24px" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
