--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,21 +19,19 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/main_TLB_head"
                 android:layout_width="match_parent"
+                app:title="@string/Dogood"
+                app:titleTextColor="@color/white"
                 android:layout_height="?attr/actionBarSize"
-                android:background="@color/colorPrimary" />
+                android:background="@color/colorPrimary"/>
 
             <com.miguelcatalan.materialsearchview.MaterialSearchView
                 android:id="@+id/main_SRC_search"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
-        </RelativeLayout>
+
     </FrameLayout>
 
     <FrameLayout
