Added search functionality

--- a/app/src/main/res/layout/askitem_recyclerview_row.xml
+++ b/app/src/main/res/layout/askitem_recyclerview_row.xml
@@ -25,9 +25,10 @@
 
             <ImageView
                 android:id="@+id/askRow_IMG_itemCategoryPic"
-                android:layout_width="wrap_content"
+                android:layout_width="100dp"
                 android:layout_height="match_parent"
-                android:background="@mipmap/ic_launcher"
+                android:scaleType="fitXY"
+                android:src="@mipmap/ic_launcher"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
