--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="colorPrimary">#FF80AB</color>
     <color name="colorPrimaryDark">#FA4D88</color>
+    <color name="clear">#00BB86FC</color>
+
 </resources>
