--- a/app/src/main/res/layout/activity_new_give_item.xml
+++ b/app/src/main/res/layout/activity_new_give_item.xml
@@ -135,13 +135,13 @@
         app:layout_constraintTop_toBottomOf="@+id/addgiveitem_LST_conditionSpinner"
         app:layout_constraintVertical_bias="0.041" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/addgiveitem_BTN_submitBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:background="@drawable/round_button_backgroud"
+        app:cornerRadius="20dp"
         android:text="@string/submit"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
